--- a/gradients-and-shadows/style.css
+++ b/gradients-and-shadows/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.8em;
 }
 
 p {
@@ -19,23 +19,28 @@ button {
     border: none;
     border-radius: 2em;
     width: 90%;
-    height: 3em;
+    height: 50px;
     font-family: inherit;
     font-weight: bold;
     font-size: 18px
 }
 
 .container {
-    padding: 4em;
+    box-sizing: border-box;
+    padding: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2em;
-    height: 70vh;
+    grid-template-columns: repeat( auto-fit, minmax(320px, 1fr) );
+    grid-gap: 10px;
 }
 
-#container-1 {
-    background-image:
-            linear-gradient(to right, #EEEEEE 74.5%, #77258A 74.5%);
+.card-container {
+    box-sizing: border-box;
+    padding: 30px;
+    height: 100%;
+    border-radius: 30px;
+    width: 320px;
+    justify-self: center;
+    border: 1px solid black;
 }
 
 #container-1 button {
@@ -43,12 +48,14 @@ button {
 }
 
 .card {
+    box-sizing: border-box;
     border: none;
-    border-radius: 2em;
+    border-radius: 30px;
     padding: 20px;
     display: grid;
     grid-template-rows: 1fr 2fr 1fr;
-    min-width: 250px;
+    width: 100%;
+    height: 600px;
 }
 
 #card-1 {
@@ -77,8 +84,10 @@ button {
     background-image: linear-gradient(to bottom right, #f5d1ff, #8aaef7);
     color: #77258A;
     box-shadow: 9px 9px 9px rgba(0, 0, 0, .3);
-    margin-left: 30px;
-    margin-right: -30px;
+}
+
+#card-container-4 {
+    background-color: #77258A;
 }
 
 #card-4-button {
@@ -101,14 +110,16 @@ button {
     background-color: #4C4C4C;
 }
 
+#card-5 {
+
+}
+
 #card-8 {
     color: white;
     background-color: #333333;
     box-shadow:
             12px 12px 12px #1c1b1b,
             -12px -12px 12px #3C3B3C !important;
-    margin-left: 30px;
-    margin-right: -30px;
 }
 
 #card-8-button {
