Missing comma caused some browsers to not set the correct background color on their buttons.

--- a/gradients-and-shadows/style.css
+++ b/gradients-and-shadows/style.css
@@ -56,7 +56,7 @@ button {
     background-color: white;
 }
 
-#card-1-button #card-2-button {
+#card-1-button, #card-2-button {
     background-color: white;
 }
 
