Added gradient to element 4.

--- a/gradients-and-shadows/style.css
+++ b/gradients-and-shadows/style.css
@@ -84,7 +84,7 @@ button {
 }
 
 #card-container-4 {
-    background-color: #77258A;
+    background-image: linear-gradient(to bottom right, #7E1F86, #2E5EAA);
 }
 
 #card-4 {
