--- a/sandbox/green-to-cream-diagonal-gradient-grid/style.css
+++ b/sandbox/green-to-cream-diagonal-gradient-grid/style.css
@@ -5,13 +5,13 @@ body {
 .wrapper {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     height: 100vh;
 }
 
 #green-gradient {
     grid-column: 1/-1;
-    grid-row: 1/4;
+    grid-row: 1/3;
     position: relative;
     background:
             linear-gradient(to bottom right, rgba(32,69,37,1) 25%, rgba(32,69,37,.8) 40%, rgba(32,69,37,0)),
@@ -30,10 +30,24 @@ body {
 
 #phil {
     grid-column: 8/10;
-    grid-row: 3/5;
+    grid-row: 2/4;
     width: auto;
     height: 100%;
     border-radius: 50%;
     z-index: 30;
     justify-self: right;
+}
+
+@media all and (max-width: 1024px) {
+    .wrapper {
+        grid-template-rows: repeat(6, 1fr);
+    }
+
+    #phil {
+        grid-row: 3/5;
+    }
+
+    #green-gradient {
+        grid-row: 1/4;
+    }
 }
